<?xml version="1.0"?>
<package format="2">
  <name>nodus</name>
  <version>0.0.0</version>
  <!-- cose che non ci interessano -->
  <license>WTFPL</license>
  <description>dolore e noia altro mai nulla</description>
  <maintainer email="esempio@quello.su">tua sorella</maintainer>

  <!-- cose che ci interessano -->
  <depend>roscpp</depend> 

  <build_depend>std_msgs</build_depend> 
  <exec_depend>std_msgs</exec_depend> 

  <build_depend>message_runtime</build_depend> 
  <exec_depend>message_runtime</exec_depend>

  <build_export_depend>message_generation</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export> </export>
</package>
